--- a/index.html
+++ b/index.html
@@ -3,31 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>App Management</title>
+    <title>Task Management</title>
     <script defer src="index.js"></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="inputContainer">
-      <input id="categoryInput" type="text" placeholder="Category" />
-      <input id="taskInput" type="text" placeholder="Task name" />
-      <input id="deadlineInput" type="date" placeholder="Deadline" />
-      <input type="text" id="status" placeholder="status" />
-      <button id="addTaskButton">Add Task</button>
-    </div>
-    <div class="display">
-      <ul id="categoryList">
-        Category
-      </ul>
-      <ul id="taskList">
-        Task
-      </ul>
-      <ul id="dueDate">
-        Due Date
-      </ul>
-      <ul id="statusUpdate">
-        Status
-      </ul>
-    </div>
+    <form action="" id="taskForm">
+      <div>
+        <label for="taskName">Task Name</label>
+        <input id="taskInput" type="text" placeholder="Task name" />
+      </div>
+
+      <div>
+        <label for="categoryName">Category</label>
+        <input id="categoryInput" type="text" placeholder="Category" />
+      </div>
+      <div>
+        <label for="deadline">Deadline</label>
+        <input id="deadlineInput" type="date" placeholder="Deadline" />
+      </div>
+      <div>
+        <label for="status">Status</label>
+        <input type="text" id="status" placeholder="status" />
+      </div>
+    </form>
+    <button id="addTask">
+        Add Task
+    </button>
+    <button id="reset">Reset</button>
   </body>
 </html>
