--- a/index.html
+++ b/index.html
@@ -10,33 +10,37 @@
   <body>
     <form action="" id="taskForm">
       <div>
+        <label for="categoryName">Category</label>
+        <input id="categoryInput" type="text" placeholder="Category" />
+      </div>
+
+      <div>
         <label for="taskName">Task Name</label>
         <input id="taskInput" type="text" placeholder="Task name" />
       </div>
 
       <div>
-        <label for="categoryName">Category</label>
-        <input id="categoryInput" type="text" placeholder="Category" />
-      </div>
-      <div>
         <label for="deadline">Deadline</label>
         <input id="deadlineInput" type="date" placeholder="Deadline" />
       </div>
+
       <div>
         <label for="status">Status</label>
-        <!-- <input type="text" id="status" placeholder="status" /> -->
-        <select name="" id="status">
-            <option value=""></option>
-            <option value="In progress">In progress</option>
-            <option value="Completed">completed</option>
-            <option value="Overdue">Overdue</option>
+        <select name="" id="statusInput">
+          <option value=""></option>
+          <option value="In progress">In progress</option>
+          <option value="Completed">completed</option>
+          <option value="Overdue">Overdue</option>
         </select>
       </div>
     </form>
     <div>
-      <button id="addTask">Add Task</button>
+      <button id="addTaskButton">Add Task</button>
     </div>
-    <ul id="taskList"></ul>
-    <ul id=""></ul>
+    <div class="display">
+      <ul id="taskList">
+
+      </ul>
+    </div>
   </body>
 </html>
