Done with styling and rendering, Adding filter next

--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
           <th>Status</th>
         </tr>
       </thead>
-      <tbody id="taskList">
-        
-      </tbody>
+      <tbody id="taskList"></tbody>
     </table>
   </body>
 </html>
