Added a select(option) for filter by staus in the html under the form button

--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
       <div>
         <button id="addTaskButton" type="button">Add Task</button>
       </div>
+      <br>
+      <div class="filters">
+        <label for="statusFilter">Filter by Status:</label>
+        <select name="" id="statusFilter">
+          <option value="">All Statuses</option>
+          <option value="In progress">In progress</option>
+          <option value="Completed">Completed</option>
+          <option value="Overdue">Overdue</option>
+        </select>
+      </div>
     </form>
     <table id="taskTable">
       <thead>
