remove filter select(option), work on later

--- a/index.html
+++ b/index.html
@@ -36,16 +36,15 @@
       <div>
         <button id="addTaskButton" type="button">Add Task</button>
       </div>
-      <br>
-      <div class="filters">
+      <!-- <div class="filters">
         <label for="statusFilter">Filter by Status:</label>
         <select name="" id="statusFilter">
-          <option value="">All Statuses</option>
+          <option value="" disabled selected hidden>Select status</option>
           <option value="In progress">In progress</option>
           <option value="Completed">Completed</option>
           <option value="Overdue">Overdue</option>
         </select>
-      </div>
+      </div> -->
     </form>
     <table id="taskTable">
       <thead>
